--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "canvas-confetti": "^1.9.3",
     "lucide-react": "^0.344.0",
+    "openai": "^4.83.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
