--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,8 @@ jobs:
         with:
           node-version: 18
       - run: npm install
+      - run: git config --global user.email "nobodys.business@gmail.com"
+      - run: git config --global user.name "Ofer"
       - run: echo "VITE_OPENAI_API_KEY=${{ secrets.VITE_OPENAI_API_KEY }}" >> .env
       - run: echo "VITE_UNSPLASH_API_KEY=${{ secrets.VITE_UNSPLASH_API_KEY }}" >> .env
       - run: npm run build
