--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,18 +5,39 @@ on:
     branches:
       - main
 
+permissions:
+  contents: write  # Required to push to gh-pages branch
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - name: 🚀 Checkout Repository
+        uses: actions/checkout@v3
+
+      - name: ⚙️ Setup Node.js
+        uses: actions/setup-node@v3
         with:
           node-version: 18
-      - run: npm install
-      - run: git config --global user.email "guez.ofer@gmail.com"
-      - run: git config --global user.name "Ofer"
-      - run: echo "VITE_OPENAI_API_KEY=${{ secrets.VITE_OPENAI_API_KEY }}" >> .env
-      - run: echo "VITE_UNSPLASH_API_KEY=${{ secrets.VITE_UNSPLASH_API_KEY }}" >> .env
-      - run: npm run build
-      - run: npm run deploy
+
+      - name: 🔐 Configure Git User
+        run: |
+          git config --global user.email "guez.ofer@gmail.com"
+          git config --global user.name "Ofer"
+
+      - name: 🔑 Set Environment Variables
+        run: |
+          echo "VITE_OPENAI_API_KEY=${{ secrets.VITE_OPENAI_API_KEY }}" >> .env
+          echo "VITE_UNSPLASH_API_KEY=${{ secrets.VITE_UNSPLASH_API_KEY }}" >> .env
+
+      - name: 📦 Install Dependencies
+        run: npm install
+
+      - name: 🔧 Build Project
+        run: npm run build
+
+      - name: 🚀 Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./dist  # Change to "build" if using Create React App
