--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,9 +29,6 @@ jobs:
         run: |
           echo "VITE_OPENAI_API_KEY=${{ secrets.VITE_OPENAI_API_KEY }}" >> .env
           echo "VITE_UNSPLASH_API_KEY=${{ secrets.VITE_UNSPLASH_API_KEY }}" >> .env
-
-      - name: 🛠️ Print All Environment Variables
-        run: env
                 
       - name: 📦 Install Dependencies
         run: npm install
@@ -39,8 +36,14 @@ jobs:
       - name: 🔧 Build Project
         run: npm run build
 
+      - name: 🛠️ Print All Environment Variables
+        run: env
+
+      - name: 🛠️ list files
+        run: ls -alR
+
       - name: 🚀 Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./build  # Change to "build" if using Create React App
+          publish_dir: ./dist  # Change to "build" if using Create React App
