--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-react-refresh": "^0.4.11",
     "gh-pages": "^6.3.0",
     "globals": "^15.9.0",
+    "netlify-cli": "^18.0.4",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
