--- a/.github/workflows/deploy_main_and_wip.yml
+++ b/.github/workflows/deploy_main_and_wip.yml
@@ -28,30 +28,30 @@ jobs:
     - name: Install dependencies
       run: npm install
 
-    - name: Build and deploy main branch
+    - name: Build main branch
       if: ${{ github.event.inputs.deploy_main == 'true' }}
       run: |
         git fetch origin main
         git checkout main
         npm run build
-        mkdir -p ./build/main
-        mv ./build/* ./build/main/
-        cd ./build
-        git init
-        git add .
-        git commit -m 'Deploy main branch'
-        git push --force --quiet "https://${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git" HEAD:gh-pages
+        mkdir -p ./deploy/main
+        mv ./build/* ./deploy/main/
 
-    - name: Build and deploy wip branch
+    - name: Build wip branch
       if: ${{ github.event.inputs.deploy_wip == 'true' }}
       run: |
         git fetch origin wip
         git checkout wip
         npm run build
-        mkdir -p ./build/wip
-        mv ./build/* ./build/wip/
-        cd ./build
+        mkdir -p ./deploy/wip
+        mv ./build/* ./deploy/wip/
+
+    - name: Deploy to GitHub Pages
+      run: |
+        cd ./deploy
         git init
+        git config user.name "github-actions[bot]"
+        git config user.email "github-actions[bot]@users.noreply.github.com"
         git add .
-        git commit -m 'Deploy wip branch'
-        git push --force --quiet "https://${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git" HEAD:gh-pages
+        git commit -m "Deploy to GitHub Pages"
+        git push --force "https://${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git" master:gh-pages
