--- a/.github/workflows/deploy_main_and_wip.yml
+++ b/.github/workflows/deploy_main_and_wip.yml
@@ -56,11 +56,11 @@ jobs:
         git config user.email "github-actions[bot]@users.noreply.github.com"
         git add .
         git commit -m "Deploy to GitHub Pages"
-        echo secrets
         if [[ -z "${{ secrets.GITHUB_TOKEN }}" ]]; then
         echo "❌ GITHUB_TOKEN is NOT set!"
         exit 1
         else
         echo "✅ GITHUB_TOKEN exists and is set!"
         fi        
-        git push --force "https://${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git" master:gh-pages
+        git remote add origin "https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git"
+        git push --force origin master:gh-pages
